[fix] spinner does not overlap all google-form screen.

--- a/client/src/assets/styles/utils/mixins/google-form.scss
+++ b/client/src/assets/styles/utils/mixins/google-form.scss
@@ -24,10 +24,6 @@
     border-radius: 5px;
     width: 600px;
   }
-
-  @include at-medium {
-    position: relative;
-  }
 }
 
 @mixin form-title {
