--- a/client/src/components/common/Spinner/Spinner.scss
+++ b/client/src/components/common/Spinner/Spinner.scss
@@ -2,19 +2,10 @@
 @import '../../../assets/styles/utils/mixins/responsive';
 
 .spinner {
+  @include centerlized-content;
   z-index: 3;
 
-  &--small &__circle {
-    width: 25px;
-  }
-
-  &--space-around {
-    padding: 2em 0;
-  }
-
   &--full-screen {
-    @include centerlized-content;
-
     position: absolute;
     top: 0;
     left: 0;
@@ -23,47 +14,44 @@
   }
 
   &--on-content {
-    @include centerlized-content;
-
     background-color: var(--transparent-white);
     position: absolute;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   &--on-bottom {
-    top: initial;
+    background-color: var(--transparent-white);
+    position: absolute;
+    left: 0;
     bottom: 0;
-  }
-
-  &--full-vh {
+    width: 100%;
     height: 100vh;
 
-    @include at-small {
-      width: calc(100% + 3.5em);
-      left: -1.5em;
-    }
-  }
+    @include at-medium {
+      justify-content: flex-start;
 
-  &--overlay {
-    background-color: var(--transparent-white);
+      .spinner__wrapper {
+        width: 83%;
+      }
+    }
   }
 
   &--space-around {
     padding: 1.5em 0 0.5em;
   }
 
+  &--small &__circle {
+    width: 25px;
+  }
+
   &__circle {
     animation: spin 600ms linear infinite;
-    width: 20px;
+    width: 30px;
     display: block;
     margin: 0 auto;
-
-    @include at-medium {
-      width: 30px;
-    }
   }
 }
 
